[gd_scene load_steps=3 format=3 uid="uid://dlly2ai4ybbbj"]

[ext_resource type="Script" uid="uid://bgvps3nd5i0gs" path="res://StoryNode.gd" id="1_fkw25"]
[ext_resource type="Texture2D" uid="uid://cko43lv4y20ii" path="res://delete.png" id="2_jrfkl"]

[node name="GraphNode" type="GraphNode"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_fkw25")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
top_level = true
z_index = 5
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
texture = ExtResource("2_jrfkl")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
top_level = true
z_index = 1
layout_direction = 2
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
top_level = true
z_index = 2
layout_mode = 2

[node name="TitleEdit" type="LineEdit" parent="VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.52, 0.52, 0.52, 1)
theme_override_font_sizes/font_size = 12
text = "255"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="text_changed" from="VBoxContainer/MarginContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
